fix: удалить Equals и HashCode в классах Category, User fix: исправить опечатки, и некорректные сообщения в log fix: убрать ненужные аннотации в классах CategoryDtoInput, Event, NewCategoryDto, NewUserRequest fix: перенести сохранение статистики из сервиса в контроллер feat: добавить недостающие аннотации для проверки данных в классах CategoryDtoInput, fix: исправить названия методов в CategoryMapper, UserMapper, RequestMapper fix: добавить обработку исключений в классе CategoryServiceImpl fix: добавить сохранение изменённых объектов в базу данных fix: добавить аннотацию @JoinTable к списку событий fix: исправить явное проставление null в методах создания объектов fix: заменить циклы fix: удалить объекты сразу по идентифекатору, без предварительного получения из бд fix: удалить сущность модели данных Location.java fix: удалить ненужные вызовы методов fix: добавить ограничения длины к полям с типом Varchar, исправить числовые типы данных и добавить NOT NULL к определённым полям в schema.sql